cleanup and add stuyff