@@ -6,20 +6,25 @@
         <artifactId>AirlineInformationSystem</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+<!--    <parent>
+        <groupId>nl.fontys.sebivenlo</groupId>
+        <artifactId>sebipom</artifactId>
+        <version>3.0.4</version>
+        <relativePath/>
+    </parent>-->
     <artifactId>BusinessLogic</artifactId>
     <packaging>jar</packaging>
+    <properties>
+        <surefire.opens>
+            --add-opens businesslogic_module/com.group_twelve.businesslogic=ALL-UNNAMED
+        </surefire.opens>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>fontys</groupId>
             <artifactId>Persistence</artifactId>
             <version>1.0-SNAPSHOT</version>
             <type>jar</type>
-            <exclusions>
-                <exclusion>
-                    <groupId>fontys</groupId>
-                    <artifactId>BusinessLogic</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>fontys</groupId>
